move graph to ednet_one

--- a/apps/ednet_one/lib/src/localization/app_en.arb
+++ b/apps/ednet_one/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "ednet_one",
+  "appTitle": "ednet_cms_graph",
   "@appTitle": {
     "description": "The title of the application"
   }
